--- a/data_wrangle.ipynb
+++ b/data_wrangle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -108,21 +108,21 @@
        "[271116 rows x 2 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv(\"athlete_events.csv\")\n",
+    "df = pd.read_csv(\"data/athlete_events.csv\")\n",
     "df2 = df[[\"NOC\",\"Medal\"]].copy()\n",
     "df2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -260,19 +260,19 @@
        "[230 rows x 3 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nocnames = pd.read_csv(\"noc_regions.csv\")\n",
+    "nocnames = pd.read_csv(\"data/noc_regions.csv\")\n",
     "nocnames"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "[230 rows x 2 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,11 +390,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new.to_csv(\"cleaned_data.csv\")"
+    "new.to_csv(\"data/cleaned_data.csv\",index=False)"
    ]
   }
  ],
