updated cleaned data column name and more testing

--- a/data_wrangle.ipynb
+++ b/data_wrangle.ipynb
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>region</th>\n",
+       "      <th>Country</th>\n",
        "      <th>Medal</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -362,7 +362,7 @@
        "</div>"
       ],
       "text/plain": [
-       "          region  Medal\n",
+       "         Country  Medal\n",
        "0    Afghanistan      2\n",
        "1        Curacao      1\n",
        "2        Albania      0\n",
@@ -378,19 +378,20 @@
        "[230 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "new = countofmedals.merge(nocnames,on=\"NOC\",how=\"left\")[[\"region\",\"Medal\"]]\n",
+    "new.rename(columns={\"region\":\"Country\"},inplace=True)\n",
     "new"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
