map working now, removed testing files

--- a/data_wrangle.ipynb
+++ b/data_wrangle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "[271116 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,27 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Medal    USA\n",
-      "dtype: object Medal    5637\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "countofmedals = df2.groupby([\"NOC\"]).count()\n",
-    "print(countofmedals.idxmax(), countofmedals.max())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +240,7 @@
        "[230 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -303,28 +283,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2</td>\n",
+       "      <td>China</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Curacao</td>\n",
-       "      <td>1</td>\n",
+       "      <td>China</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>0</td>\n",
+       "      <td>China</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>17</td>\n",
+       "      <td>China</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Andorra</td>\n",
-       "      <td>0</td>\n",
+       "      <td>China</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -332,70 +312,102 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>225</th>\n",
-       "      <td>Yemen</td>\n",
-       "      <td>0</td>\n",
+       "      <th>270762</th>\n",
+       "      <td>Lesotho</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>226</th>\n",
-       "      <td>Yemen</td>\n",
-       "      <td>0</td>\n",
+       "      <th>270763</th>\n",
+       "      <td>Lesotho</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>227</th>\n",
-       "      <td>Serbia</td>\n",
-       "      <td>390</td>\n",
+       "      <th>270764</th>\n",
+       "      <td>Lesotho</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>228</th>\n",
-       "      <td>Zambia</td>\n",
-       "      <td>2</td>\n",
+       "      <th>270765</th>\n",
+       "      <td>Lesotho</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>229</th>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>22</td>\n",
+       "      <th>270766</th>\n",
+       "      <td>Lesotho</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>230 rows × 2 columns</p>\n",
+       "<p>270767 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Country  Medal\n",
-       "0    Afghanistan      2\n",
-       "1        Curacao      1\n",
-       "2        Albania      0\n",
-       "3        Algeria     17\n",
-       "4        Andorra      0\n",
-       "..           ...    ...\n",
-       "225        Yemen      0\n",
-       "226        Yemen      0\n",
-       "227       Serbia    390\n",
-       "228       Zambia      2\n",
-       "229     Zimbabwe     22\n",
+       "        Country Medal\n",
+       "0         China   NaN\n",
+       "1         China   NaN\n",
+       "2         China   NaN\n",
+       "3         China   NaN\n",
+       "4         China   NaN\n",
+       "...         ...   ...\n",
+       "270762  Lesotho   NaN\n",
+       "270763  Lesotho   NaN\n",
+       "270764  Lesotho   NaN\n",
+       "270765  Lesotho   NaN\n",
+       "270766  Lesotho   NaN\n",
        "\n",
-       "[230 rows x 2 columns]"
+       "[270767 rows x 2 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new = countofmedals.merge(nocnames,on=\"NOC\",how=\"left\")[[\"region\",\"Medal\"]]\n",
+    "new = df2.merge(nocnames,on=\"NOC\",)[[\"region\",\"Medal\"]]\n",
     "new.rename(columns={\"region\":\"Country\"},inplace=True)\n",
+    "\n",
     "new"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new.to_csv(\"data/cleaned_data.csv\",index=False)"
+    "countofmedals = new.groupby([\"Country\"]).count().reset_index()\n",
+    "countofmedals.loc[countofmedals.Country==\"USA\",\"Country\"] = \"United States of America\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5637"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "countofmedals.Medal.max()\n",
+    "# countofmedals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countofmedals.to_csv(\"data/cleaned_data.csv\",index=False)"
    ]
   }
  ],
