--- a/data_wrangle.ipynb
+++ b/data_wrangle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28,6 +28,7 @@
        "      <th></th>\n",
        "      <th>NOC</th>\n",
        "      <th>Medal</th>\n",
+       "      <th>Year</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -35,29 +36,35 @@
        "      <th>0</th>\n",
        "      <td>CHN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1992</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>CHN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>2012</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>DEN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1920</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>DEN</td>\n",
        "      <td>Gold</td>\n",
+       "      <td>1900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>NED</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1988</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
@@ -65,64 +72,70 @@
        "      <th>271111</th>\n",
        "      <td>POL</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1976</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>271112</th>\n",
        "      <td>POL</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>2014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>271113</th>\n",
        "      <td>POL</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>2014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>271114</th>\n",
        "      <td>POL</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1998</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>271115</th>\n",
        "      <td>POL</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>2002</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>271116 rows × 2 columns</p>\n",
+       "<p>271116 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        NOC Medal\n",
-       "0       CHN   NaN\n",
-       "1       CHN   NaN\n",
-       "2       DEN   NaN\n",
-       "3       DEN  Gold\n",
-       "4       NED   NaN\n",
-       "...     ...   ...\n",
-       "271111  POL   NaN\n",
-       "271112  POL   NaN\n",
-       "271113  POL   NaN\n",
-       "271114  POL   NaN\n",
-       "271115  POL   NaN\n",
+       "        NOC Medal  Year\n",
+       "0       CHN   NaN  1992\n",
+       "1       CHN   NaN  2012\n",
+       "2       DEN   NaN  1920\n",
+       "3       DEN  Gold  1900\n",
+       "4       NED   NaN  1988\n",
+       "...     ...   ...   ...\n",
+       "271111  POL   NaN  1976\n",
+       "271112  POL   NaN  2014\n",
+       "271113  POL   NaN  2014\n",
+       "271114  POL   NaN  1998\n",
+       "271115  POL   NaN  2002\n",
        "\n",
-       "[271116 rows x 2 columns]"
+       "[271116 rows x 3 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "df = pd.read_csv(\"data/athlete_events.csv\")\n",
-    "df2 = df[[\"NOC\",\"Medal\"]].copy()\n",
+    "df2 = df[[\"NOC\",\"Medal\",\"Year\"]].copy()\n",
     "df2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +253,7 @@
        "[230 rows x 3 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +371,7 @@
        "[270767 rows x 2 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,17 +385,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Medal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>American Samoa</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>Virgin Islands, British</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>201</th>\n",
+       "      <td>Virgin Islands, US</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>202</th>\n",
+       "      <td>Yemen</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>203</th>\n",
+       "      <td>Zambia</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>204</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>205 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Country  Medal\n",
+       "0                Afghanistan      2\n",
+       "1                    Albania      0\n",
+       "2                    Algeria     17\n",
+       "3             American Samoa      0\n",
+       "4                    Andorra      0\n",
+       "..                       ...    ...\n",
+       "200  Virgin Islands, British      0\n",
+       "201       Virgin Islands, US      1\n",
+       "202                    Yemen      0\n",
+       "203                   Zambia      2\n",
+       "204                 Zimbabwe     22\n",
+       "\n",
+       "[205 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "countofmedals = new.groupby([\"Country\"]).count().reset_index()\n",
-    "countofmedals.loc[countofmedals.Country==\"USA\",\"Country\"] = \"United States of America\""
+    "\n",
+    "# countofmedals.loc[countofmedals.Country==\"USA\",\"Country\"] = \"United States of America\"\n",
+    "countofmedals"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +514,7 @@
        "5637"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,11 +526,234 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bronze = new[new.Medal==\"Bronze\"]\n",
+    "bronze_count = bronze.groupby([\"Country\"]).count()\n",
+    "bronze_count.rename(columns={\"Medal\":\"Bronze\"},inplace=True)\n",
+    "# bronze_count\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "silver= new[new.Medal==\"Silver\"]\n",
+    "silver_count = silver.groupby([\"Country\"]).count()\n",
+    "silver_count.rename(columns={\"Medal\":\"Silver\"},inplace=True)\n",
+    "# silver_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gold =  new[new.Medal==\"Gold\"]\n",
+    "gold_count = gold.groupby([\"Country\"]).count()\n",
+    "gold_count.rename(columns={\"Medal\":\"Gold\"},inplace=True)\n",
+    "# gold_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Medal</th>\n",
+       "      <th>Bronze</th>\n",
+       "      <th>Silver</th>\n",
+       "      <th>Gold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>17</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>American Samoa</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>Virgin Islands, British</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>201</th>\n",
+       "      <td>Virgin Islands, US</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>202</th>\n",
+       "      <td>Yemen</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>203</th>\n",
+       "      <td>Zambia</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>204</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>205 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Country  Medal Bronze Silver Gold\n",
+       "0                Afghanistan      2      2      0    0\n",
+       "1                    Albania      0      0      0    0\n",
+       "2                    Algeria     17      8      4    5\n",
+       "3             American Samoa      0      0      0    0\n",
+       "4                    Andorra      0      0      0    0\n",
+       "..                       ...    ...    ...    ...  ...\n",
+       "200  Virgin Islands, British      0      0      0    0\n",
+       "201       Virgin Islands, US      1      0      1    0\n",
+       "202                    Yemen      0      0      0    0\n",
+       "203                   Zambia      2      1      1    0\n",
+       "204                 Zimbabwe     22      1      4   17\n",
+       "\n",
+       "[205 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "countofmedals = new.groupby([\"Country\"]).count().reset_index()\n",
+    "countofmedals = countofmedals.merge(bronze_count,how=\"outer\",on= \"Country\",)\n",
+    "countofmedals = countofmedals.merge(silver_count,how=\"outer\",on= \"Country\",)\n",
+    "countofmedals = countofmedals.merge(gold_count,how=\"outer\",on= \"Country\",)\n",
+    "countofmedals = countofmedals.fillna(0)\n",
+    "countofmedals[\"Bronze\"] = countofmedals[\"Bronze\"].astype(int).astype(str)\n",
+    "countofmedals[\"Silver\"] = countofmedals[\"Silver\"].astype(int).astype(str)\n",
+    "countofmedals[\"Gold\"] = countofmedals[\"Gold\"].astype(int).astype(str)\n",
+    "countofmedals.loc[countofmedals.Country==\"USA\",\"Country\"] = \"United States of America\"\n",
+    "countofmedals\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "countofmedals.to_csv(\"data/cleaned_data.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new2 = df2.merge(nocnames,on=\"NOC\",)[[\"region\",\"Medal\",\"Year\"]]\n",
+    "new2.rename(columns={\"region\":\"Country\"},inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "culmulativemedals =new2.groupby([\"Country\",\"Year\"],as_index=False).count().assign(\n",
+    "        # assign the cumulative sum of each name as a new column\n",
+    "        cumulative_sum=lambda x: x.groupby('Country')['Medal'].cumsum()\n",
+    "    )\n",
+    "# culmulativemedals\n",
+    "culmulativemedals.loc[culmulativemedals.Country==\"USA\",\"Country\"] = \"United States of America\"\n",
+    "culmulativemedals.to_csv(\"data/yearly_cleaned_data.csv\",index=False)"
    ]
   }
  ],
