added medals by gender and age

--- a/data_wrangle.ipynb
+++ b/data_wrangle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "[271116 rows x 3 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "[230 rows x 3 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
        "[270767 rows x 2 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
        "[205 rows x 2 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
        "5637"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,11 +538,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "silver= new[new.Medal==\"Silver\"]\n",
+    "= new[new.Medal==\"Silver\"]\n",
     "silver_count = silver.groupby([\"Country\"]).count()\n",
     "silver_count.rename(columns={\"Medal\":\"Silver\"},inplace=True)\n",
     "# silver_count"
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
        "[205 rows x 5 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,6 +764,261 @@
     "# culmulativemedals\n",
     "culmulativemedals.loc[culmulativemedals.Country==\"USA\",\"Country\"] = \"United States of America\"\n",
     "culmulativemedals.to_csv(\"data/yearly_cleaned_data.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Medal</th>\n",
+       "      <th>Bronze</th>\n",
+       "      <th>Silver</th>\n",
+       "      <th>Gold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>F</td>\n",
+       "      <td>11253</td>\n",
+       "      <td>3771</td>\n",
+       "      <td>3735</td>\n",
+       "      <td>3747</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M</td>\n",
+       "      <td>28530</td>\n",
+       "      <td>9524</td>\n",
+       "      <td>9381</td>\n",
+       "      <td>9625</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Sex  Medal  Bronze  Silver  Gold\n",
+       "0   F  11253    3771    3735  3747\n",
+       "1   M  28530    9524    9381  9625"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3 = df[[\"Medal\",\"Sex\"]].copy()\n",
+    "# df3 =  df3.merge(nocnames,on=\"NOC\",)[[\"region\",\"Medal\"]]\n",
+    "# df3.rename(columns={\"region\":\"Country\"},inplace=True)\n",
+    "final = df3.groupby([\"Sex\"],as_index=False).count()\n",
+    "BronzeG = df3[df3[\"Medal\"]==\"Bronze\"].groupby([\"Sex\"],as_index=False).count()\n",
+    "BronzeG.rename(columns={\"Medal\":\"Bronze\"},inplace=True)\n",
+    "final = final.merge(BronzeG,how=\"outer\",on=\"Sex\")\n",
+    "\n",
+    "SilverG = df3[df3[\"Medal\"]==\"Silver\"].groupby([\"Sex\"],as_index=False).count()\n",
+    "SilverG.rename(columns={\"Medal\":\"Silver\"},inplace=True)\n",
+    "final = final.merge(SilverG,how=\"outer\",on=\"Sex\")\n",
+    "\n",
+    "GoldG = df3[df3[\"Medal\"]==\"Gold\"].groupby([\"Sex\"],as_index=False).count()\n",
+    "GoldG.rename(columns={\"Medal\":\"Gold\"},inplace=True)\n",
+    "byGenderfinal = final.merge(GoldG,how=\"outer\",on=\"Sex\")\n",
+    "\n",
+    "byGenderfinal.to_csv(\"data/cleaned_GroupByGender_data.csv\",index=False)\n",
+    "byGenderfinal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Medal</th>\n",
+       "      <th>Bronze</th>\n",
+       "      <th>Silver</th>\n",
+       "      <th>Gold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13.0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>75</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>27.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>81.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>84.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>88.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>96.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>97.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>74 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Age  Medal  Bronze  Silver  Gold\n",
+       "0   10.0      1     1.0     0.0   0.0\n",
+       "1   11.0      1     0.0     1.0   0.0\n",
+       "2   12.0      6     3.0     3.0   0.0\n",
+       "3   13.0     16     2.0     7.0   7.0\n",
+       "4   14.0     75    18.0    30.0  27.0\n",
+       "..   ...    ...     ...     ...   ...\n",
+       "69  81.0      0     0.0     0.0   0.0\n",
+       "70  84.0      0     0.0     0.0   0.0\n",
+       "71  88.0      0     0.0     0.0   0.0\n",
+       "72  96.0      0     0.0     0.0   0.0\n",
+       "73  97.0      0     0.0     0.0   0.0\n",
+       "\n",
+       "[74 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "df4 = df[[\"Age\",\"Medal\"]].copy()\n",
+    "final = df4.groupby([\"Age\"],as_index=False).count()\n",
+    "\n",
+    "BronzeA = df4[df4[\"Medal\"]==\"Bronze\"].groupby([\"Age\"],as_index=False).count()\n",
+    "BronzeA.rename(columns={\"Medal\":\"Bronze\"},inplace=True)\n",
+    "final = final.merge(BronzeA,how=\"outer\",on=\"Age\")\n",
+    "\n",
+    "SilverA = df4[df4[\"Medal\"]==\"Silver\"].groupby([\"Age\"],as_index=False).count()\n",
+    "SilverA.rename(columns={\"Medal\":\"Silver\"},inplace=True)\n",
+    "final = final.merge(SilverA,how=\"outer\",on=\"Age\")\n",
+    "\n",
+    "GoldA = df4[df4[\"Medal\"]==\"Gold\"].groupby([\"Age\"],as_index=False).count()\n",
+    "GoldA.rename(columns={\"Medal\":\"Gold\"},inplace=True)\n",
+    "byAgefinal = final.merge(GoldA,how=\"outer\",on=\"Age\").fillna(0)\n",
+    "byAgefinal.to_csv(\"data/cleaned_age_data.csv\")\n",
+    "byAgefinal"
    ]
   }
  ],
